hphp/hack/test/typecheck/super_constraint_9.php.exp
File "super_constraint_9.php", line 7, characters 10-10:
Invalid return type (Typing[4336])
File "super_constraint_9.php", line 7, characters 10-10:
Expected void because this function does not always return a value
File "super_constraint_9.php", line 7, characters 59-66:
But got Foo<Tk2>
